<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.opengl.GLSurfaceView
        android:id="@+id/videoSurface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/playerControlsPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/launcher_background"
        android:orientation="vertical"
        android:paddingStart="@dimen/player_controls_panel_horizontal_padding"
        android:paddingTop="@dimen/player_controls_panel_top_safe_padding"
        android:paddingEnd="@dimen/player_controls_panel_horizontal_padding"
        android:paddingBottom="@dimen/player_controls_panel_bottom_safe_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.05"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/glassesSettingsButton"
                style="@style/Widget.Vr2xr.Player.IconOnlyButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/glasses_settings_content_description"
                app:icon="@drawable/ic_player_glasses" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/projectionSettingsButton"
                style="@style/Widget.Vr2xr.Player.IconOnlyButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/player_controls_row_spacing"
                android:layout_weight="1"
                android:contentDescription="@string/projection_settings_content_description"
                app:icon="@android:drawable/ic_menu_slideshow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:layout_marginTop="@dimen/player_controls_primary_row_spacing"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seekBackButton"
                style="@style/Widget.Vr2xr.Player.TransportIconButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/player_controls_transport_spacing"
                android:layout_weight="1"
                android:contentDescription="@string/player_seek_back_content_description"
                app:icon="@android:drawable/ic_media_rew" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playPauseButton"
                style="@style/Widget.Vr2xr.Player.PlayPauseButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.45"
                android:contentDescription="@string/player_play_content_description"
                android:gravity="center"
                app:icon="@android:drawable/ic_media_play" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/seekForwardButton"
                style="@style/Widget.Vr2xr.Player.TransportIconButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/player_controls_transport_spacing"
                android:layout_weight="1"
                android:contentDescription="@string/player_seek_forward_content_description"
                app:icon="@android:drawable/ic_media_ff" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:layout_marginTop="@dimen/player_controls_row_spacing"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/currentTimeText"
                style="@style/TextAppearance.Vr2xr.Player.TimeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player_default_time"
                android:textAlignment="viewStart" />

            <com.google.android.material.slider.Slider
                android:id="@+id/timelineSlider"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/player_timeline_time_spacing"
                android:layout_marginEnd="@dimen/player_timeline_time_spacing"
                android:layout_weight="4.5"
                android:contentDescription="@string/player_timeline_content_description"
                android:value="0"
                android:valueFrom="0"
                android:valueTo="1"
                app:haloColor="@color/player_controls_timeline_halo"
                app:labelBehavior="gone"
                app:thumbColor="@color/player_controls_timeline_active"
                app:trackColorActive="@color/player_controls_timeline_active"
                app:trackColorInactive="@color/player_controls_timeline_inactive" />

            <TextView
                android:id="@+id/durationTimeText"
                style="@style/TextAppearance.Vr2xr.Player.TimeLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/player_default_time"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.35"
            android:layout_marginTop="@dimen/player_controls_row_spacing"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/recenterButton"
                style="@style/Widget.Vr2xr.Player.IconOnlyButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/recenter_content_description"
                app:icon="@android:drawable/ic_menu_compass" />

            <FrameLayout
                android:id="@+id/touchpadArea"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/player_controls_row_spacing"
                android:layout_weight="3"
                android:background="@drawable/bg_player_touchpad"
                android:contentDescription="@string/player_touchpad_content_description">

                <View
                    android:id="@+id/touchpadIndicator"
                    android:layout_width="@dimen/player_touchpad_indicator_size"
                    android:layout_height="@dimen/player_touchpad_indicator_size"
                    android:layout_gravity="center"
                    android:background="@drawable/bg_player_touchpad_indicator" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/diagnosticsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>
