<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/launcher_background"
    android:orientation="vertical"
    android:paddingStart="@dimen/launcher_screen_padding"
    android:paddingTop="@dimen/launcher_screen_padding"
    android:paddingEnd="@dimen/launcher_screen_padding"
    android:paddingBottom="@dimen/launcher_screen_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/instructionText"
            style="@style/TextAppearance.Vr2xr.Setup.Instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tracking_ready_step" />

        <ImageView
            android:id="@+id/setupGlassesIcon"
            android:layout_width="@dimen/setup_glasses_icon_size"
            android:layout_height="@dimen/setup_glasses_icon_size"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/setup_glasses_icon_top_margin"
            android:contentDescription="@string/xreal_status_icon_content_description"
            android:src="@drawable/ic_glasses_status" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/setup_button_top_margin">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueButton"
                style="@style/Widget.Vr2xr.Launcher.PrimaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tracking_ready_continue" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/continueProgressIndicator"
                android:layout_width="@dimen/setup_button_indicator_size"
                android:layout_height="@dimen/setup_button_indicator_size"
                android:layout_gravity="start|center_vertical"
                android:layout_marginStart="@dimen/setup_button_indicator_margin_start"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/catppuccin_mocha_mantle"
                app:indicatorSize="@dimen/setup_button_indicator_size"
                app:trackThickness="@dimen/setup_button_indicator_thickness"
                app:trackColor="@android:color/transparent" />
        </FrameLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/footerText"
        style="@style/TextAppearance.Vr2xr.Launcher.Footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/launcher_footer_top_margin"
        android:gravity="center_horizontal"
        android:text="@string/footer_designed_with" />
</LinearLayout>
